# maa-cli

./: .cliffignore  .editorconfig  .gitignore  .linkspector.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README-CN.md  README-EN.md  README-ZH.md  README.md  about.hbs  about.toml  alpha.json  alpha.txt  beta.json  beta.txt  cliff.toml  codecov.yml  ctx.json  deny.toml  install.ps1  install.sh  licenses.html  licenses.md  rustfmt.toml  stable.json  stable.txt  version.json
crates/maa-cli/: Cargo.toml  build.rs  fixtures
crates/maa-cli-config/: Cargo.toml  README.md  SPEC.md
crates/maa-cli-config/fixtures/invalid/: account_name_with_sessions.yaml  conflicting_modes.yaml  empty_all.yaml  empty_any.yaml  empty_datetime.yaml  empty_session_tasks.yaml  empty_sessions.yaml  empty_tasks.yaml  empty_time.yaml  empty_weekdays.yaml  missing_mode.yaml  version.yaml
crates/maa-cli-config/fixtures/profile/: avd.toml  general.toml  inherit.yaml  mumupro.json  playcover.yaml  waydroid.yaml
crates/maa-cli-config/fixtures/task/: conditions.yaml  placeholders.yaml  sessions.toml  sessions.yaml  tasks.json  tasks.toml  tasks.yaml
crates/maa-cli-config/src/: error.rs  lib.rs  profile.rs  version.rs
crates/maa-cli-config/src/profile/: advanced.rs  behavior.rs  config.rs  connection.rs  mod.rs
crates/maa-cli-config/src/task/: condition.rs  config.rs  mod.rs  session.rs  single.rs  time.rs
crates/maa-cli-config/tests/: profile_examples.rs  task_resolve.rs
crates/maa-cli/completions/: maa.fish
crates/maa-cli/config_examples/: cli.toml
crates/maa-cli/config_examples/tasks/: daily.json  daily.toml  daily.yml
crates/maa-cli/docs/: gen_docs.sh
crates/maa-cli/docs/en-US/: config.md  faq.md  install.md  intro.md  usage.md
crates/maa-cli/docs/ja-JP/: config.md  install.md  usage.md
crates/maa-cli/docs/ko-KR/: config.md  install.md  intro.md  usage.md
crates/maa-cli/fixtures/: version
crates/maa-cli/schemas/: asst.schema.json  cli.schema.json  task.schema.json
crates/maa-cli/src/: activity.rs  atomic_fs.rs  cleanup.rs  command.rs  log.rs  main.rs  resolver.rs  state.rs
crates/maa-core/: Cargo.toml  README.md  build.rs
crates/maa-core/src/: callback.rs  error.rs  lib.rs
crates/maa-dirs/: Cargo.toml
crates/maa-dirs/src/: lib.rs
crates/maa-ffi-string/: Cargo.toml
crates/maa-ffi-string/src/: lib.rs
crates/maa-installer/: Cargo.toml
crates/maa-installer/src/: error.rs  extract.rs  installer.rs  lib.rs  manifest.rs  verify.rs
crates/maa-question/: Cargo.toml
crates/maa-question/src/: lib.rs
crates/maa-server/: Cargo.toml  build.rs
crates/maa-server/examples/: client.rs  server.rs
crates/maa-server/protos/: core.proto  task.proto
crates/maa-server/src/: callback.rs  client.rs  lib.rs  server.rs  server_impl.rs  session.rs
crates/maa-str-ext/: Cargo.toml
crates/maa-str-ext/src/: lib.rs
crates/maa-sys/: Cargo.toml  README.md  build.rs
crates/maa-sys/src/: binding.rs  lib.rs  link.rs  to_cstring.rs
crates/maa-types/: Cargo.toml  types.proto
crates/maa-types/src/: client_type.rs  enum_macros.rs  lib.rs  message_kind.rs  task_type.rs  touch_mode.rs
crates/maa-value/: Cargo.toml
crates/maa-value-macro/: Cargo.toml
crates/maa-value-macro/src/: codegen.rs  lib.rs  parsing.rs
crates/maa-value-macro/tests/: basic.rs  conditional.rs  error_propagation.rs  insert_macro.rs  integration.rs  maybe_insert.rs  object_macro.rs  try_conversion.rs
crates/maa-value/src/: array.rs  convert.rs  de.rs  error.rs  input.rs  lib.rs  map.rs  primate.rs  primitive.rs  value.rs
crates/maa-version/: Cargo.toml
crates/maa-version/fixtures/: activity.json  core_version.json
crates/maa-version/src/: lib.rs
crates/maa-version/tests/: cli_serde.rs  core_serde.rs
crates/nonempty-vec/: Cargo.toml
crates/nonempty-vec/src/: lib.rs
maa-cli/: CHANGELOG.md  Cargo.toml  build.rs  i18n.toml
maa-cli/completions/: maa.fish
maa-cli/config_examples/: cli.toml
maa-cli/config_examples/profiles/: default.toml
maa-cli/config_examples/tasks/: daily.json  daily.toml  daily.yml
maa-cli/docs/: gen_docs.sh
maa-cli/docs/en-US/: config.md  faq.md  install.md  intro.md  usage.md
maa-cli/docs/ja-JP/: config.md  usage.md
maa-cli/docs/ko-KR/: config.md  faq.md  install.md  usage.md
maa-cli/docs/zh-CN/: config.md  faq.md  install.md  intro.md  usage.md
maa-cli/docs/zh-TW/: config.md  faq.md  install.md  usage.md
maa-cli/i18n/en/: maa_cli.ftl
maa-cli/i18n/zh-CN/: maa_cli.ftl
maa-cli/schemas/: asst.schema.json  cli.schema.json  task.schema.json
maa-cli/src/: activity.rs  cleanup.rs  command.rs  consts.rs  dirs.rs  log.rs  maa_run.rs  main.rs  message.rs
maa-cli/src/config/: asst.rs  cli.rs  init.rs  mod.rs  task.rs
maa-cli/src/dirs/: mod.rs
maa-cli/src/input/: bool_input.rs  input.rs  mod.rs  select.rs
maa-cli/src/installer/: download.rs  extract.rs  maa_cli.rs  maa_core.rs  mod.rs  resource.rs  version_json.rs
maa-cli/src/package/: mod.rs
maa-cli/src/run/: copilot.rs  fight.rs  message.rs  mod.rs  playcover.rs  roguelike.rs
maa-cli/src/value/: input.rs  mod.rs  primate.rs
maa-rpc-api/: Cargo.toml  README.md
maa-rpc-api/src/: lib.rs
maa-run/: Cargo.toml
maa-run/src/: log.rs  main.rs  message.rs
maa-run/src/config/: asst.rs  mod.rs  task.rs
maa-runner/: Cargo.toml  build.rs
maa-runner/src/: main.rs
maa-runner/src/config/: asst.rs  mod.rs  task.rs
maa-runner/src/dirs/: xdg.rs
maa-runner/src/maacore/: binding.rs  message.rs  mod.rs
maa-sys/: Cargo.toml  README.md  build.rs
maa-sys/src/: asst_type.rs  binding.rs  error.rs  lib.rs  link.rs  task_type.rs  to_cstring.rs  types.rs
maa-types/: Cargo.toml
maa-types/src/: lib.rs
maa-types/src/detail/: mod.rs  subtask.rs  taskchain.rs
maa-updater/: Cargo.toml
maa-updater/src/: config.rs  main.rs
maa-updater/src/package/: download.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: build.rs  cmd.rs  env.rs  github.rs  group.rs  main.rs  test.rs
xtask/src/release/: archive.rs  meta.rs  mod.rs  package.rs
xtask/x/: Cargo.toml
xtask/x/src/: main.rs
(+159 files in other folders)
