[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
license = "AGPL-3.0-only"
authors = ["Long Wang <loong@loongw.cc>"]
homepage = "https://github.com/MaaAssistantArknights/maa-cli"
repository = "https://github.com/MaaAssistantArknights/maa-cli"
rust-version = "1.84"
edition = "2024"

[workspace.dependencies]
maa-dirs = { path = "crates/maa-dirs", version = "0.2" }
maa-sys = { path = "crates/maa-sys", version = "0.7" }
maa-types = { path = "crates/maa-types", version = "0.2" }

anyhow = "1"
async-trait = "0.1.81"
chrono = { version = "0.4.31", default-features = false }
clap = "4.4"
clap_complete = "4.4"
clap_mangen = "0.2.20"
color-print = "0.3.6"
constcat = "0.6.0"
digest = "0.10.7"
directories = "6"
dunce = "1.0.4"
env_logger = { version = "0.11", default-features = false }
flate2 = "1"
futures-util = "0.3.28"
git2 = "0.20"
indicatif = "0.17.7"
libloading = "0.8"
log = "0.4.20"
prettytable = { version = "0.10.0", default-features = false }
regex = "1.10.2"
reqwest = { version = "0.12", features = ["native-tls"] }
self-replace = "1.5.0"
semver = "1.0.19"
serde = "1"
serde_json = "1"
serde_test = "1"
serde_yaml = "0.9.25"
sha2 = "0.10.7"
signal-hook = "0.3.17"
tar = "0.4.40"
tempfile = "3.14.0"
thiserror = "2"
tokio = "1.44"
toml = "0.8"
windows-result = "0.3.0"
windows-strings = "0.4.0"
windows-sys = "0.59.0"
zip = { version = "2", default-features = false }

[workspace.metadata.typos.files]
extend-exclude = ["licenses.md"]

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage,coverage_nightly)',
] }
