#:tombi schema.strict = false

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
# tombi: lint.rules.deprecated.disabled = true
authors = ["Long Wang <loong@loongw.cc>"]
edition = "2024"
rust-version = "1.88"
homepage = "https://github.com/MaaAssistantArknights/maa-cli"
repository = "https://github.com/MaaAssistantArknights/maa-cli"
license = "AGPL-3.0-only"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1.81"
chrono = { version = "0.4.31", default-features = false }
clap = "4.4"
clap_complete = "4.4"
clap_mangen = "0.2.20"
color-print = "0.3.6"
constcat = "0.6.0"
digest = "0.10.7"
directories = "6"
dunce = "1.0.4"
env_logger = { version = "0.11", default-features = false }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
futures-util = "0.3.28"
git2 = "0.20"
indicatif = "0.18"
libloading = "0.8"
log = "0.4.20"
maa-dirs = { path = "crates/maa-dirs", version = "0.2" }
maa-sys = { path = "crates/maa-sys", version = "0.7" }
maa-types = { path = "crates/maa-types", version = "0.2" }
prettytable = { version = "0.10.0", default-features = false }
regex = "1.10.2"
reqwest = { version = "0.12", default-features = false, features = [
  "charset",
  "http2",
  "rustls-tls",
  "system-proxy",
] }
self-replace = "1.5.0"
semver = "1.0.19"
serde = "1"
serde_json = "1"
serde_test = "1"
serde_yaml = "0.9.25"
sha2 = "0.10.7"
signal-hook = "0.3.17"
tar = "0.4.40"
tempfile = "3.14.0"
thiserror = "2"
tokio = "1.44"
toml = "0.9"
windows-result = "0.4.0"
windows-strings = "0.5.0"
windows-sys = "0.61.0"
zip = { version = "5", default-features = false, features = ["deflate-flate2"] }

[workspace.lints.rust]
unexpected_cfgs = { check-cfg = [
  "cfg(coverage,coverage_nightly)",
], level = "warn" }

[workspace.metadata.typos.files]
extend-exclude = ["licenses.md"]
