[workspace]
resolver = "2"
members = ["crates/*", "xtask", "xtask/x"]
default-members = ["crates/maa-cli"]

[workspace.package]
edition = "2024"
rust-version = "1.88"
homepage = "https://github.com/MaaAssistantArknights/maa-cli"
repository = "https://github.com/MaaAssistantArknights/maa-cli"
license = "AGPL-3.0-only"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4.31", default-features = false }
clap = { version = "4.4", features = ["unstable-markdown"] }
clap_complete = "4.4"
clap_mangen = "0.2.20"
color-print = "0.3.6"
constcat = "0.6.0"
digest = "0.10.7"
directories = "6"
dunce = "1.0.4"
env_logger = { version = "0.11", default-features = false }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
git2 = "0.20"
indicatif = "0.18"
libloading = "0.9"
log = "0.4.20"
maa-dirs = { path = "crates/maa-dirs", version = "0.3" }
maa-ffi-string = { path = "crates/maa-ffi-string", version = "0.1" }
maa-installer = { path = "crates/maa-installer", version = "0.2" }
maa-str-ext = { path = "crates/maa-str-ext", version = "0.1" }
maa-sys = { path = "crates/maa-sys", version = "0.9" }
maa-types = { path = "crates/maa-types", version = "0.3" }
maa-value = { path = "crates/maa-value", version = "0.1" }
maa-version = { path = "crates/maa-version", version = "0.1" }
prettytable = { version = "0.10.0", default-features = false }
rayon = "1.11.0"
regex = "1.10.2"
schemars = "1.0"
self-replace = "1.5.0"
semver = { version = "1.0.19", features = ["serde"] }
serde = "1"
serde_json = "1"
serde_test = "1"
serde_yaml = "0.9.25"
sha2 = "0.10.7"
signal-hook = "0.3.17"
tar = "0.4.40"
tempfile = "3.14.0"
thiserror = "2"
tiny_http = "0.12"
toml = "0.9"
ureq = { version = "3" }
windows-result = "0.4.0"
windows-strings = "0.5.0"
windows-sys = "0.61.0"
zip = { version = "6", default-features = false, features = ["deflate-flate2"] }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  "cfg(coverage,coverage_nightly)",
] }

[workspace.metadata.typos.files]
extend-exclude = ["licenses.md"]

[profile.release-lto]
inherits = "release"
strip = "symbols"
lto = "fat"
codegen-units = 1
