[package]
name = "maa-cli"
authors = ["Loong Wang <wangl-cc@outlook.com>"]
version = "0.4.1"
edition = "2021"
readme = "../README-EN.md"
description = "A simple CLI for MAA (MaaAssistantArknights)"
repository.workspace = true
license.workspace = true

[features]
default = ["cli_installer", "core_installer", "git2"]

# Features used to install and update MAA Core
core_installer = ["__installer"]

# Features used to install update maa-cli self
cli_installer = ["__installer"]

# Vendored openssl
vendored-openssl = ["git2?/vendored-openssl", "reqwest/native-tls-vendored"]

# Common features used to install and update MAA Core and maa-cli self
__installer = [
  "tokio",
  "indicatif",
  "futures-util",
  "sha2",
  "digest",
  "semver",
  "flate2",
  "tar",
  "zip",
  "reqwest/stream",
]

[[bin]]
name = "maa"
path = "src/main.rs"

[dependencies]
maa-sys = { path = "../maa-sys", version = "0.3.1", features = [
  "runtime",
  "serde",
] }

directories = "5"
paste = "1"
anyhow = "1"
signal-hook = "0.3.17"
dunce = "1.0.4"
lazy_static = "1.4.0"
sys-locale = "0.3.1"
prettytable = { version = "0.10.0", default-features = false }

clap = { version = "4.4", features = ["derive"] }
clap_complete = { version = "4.4" }
clap-verbosity-flag = "2.1"

toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.25"

# Backend used to manipulate resource repository
git2 = { version = "0.18.1", optional = true }

# Dependencies used to download files
indicatif = { version = "0.17.7", optional = true }
futures-util = { version = "0.3.28", optional = true }
sha2 = { version = "0.10.7", optional = true }
digest = { version = "0.10.7", optional = true }
semver = { version = "1.0.19", features = ["serde"], optional = true }

# Dependencies used to extract files
flate2 = { version = "1", optional = true }
tar = { version = "0.4.40", optional = true }

# Logging support
log = "0.4.20"
[dependencies.env_logger]
version = "0.10.1"
default-features = false
features = ["auto-color"]

# Datetime support
[dependencies.chrono]
version = "0.4.31"
default-features = false
features = ["std", "clock", "serde"]

[dependencies.zip]
version = "0.6.6"
optional = true
default-features = false
features = ["deflate"]

[dependencies.tokio]
version = "1.31"
optional = true
default-features = false
features = ["rt"]

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json"]

[target.'cfg(windows)'.dependencies.windows]
version = "0.52.0"
features = ["Win32_Foundation", "Win32_System_LibraryLoader"]

[target.'cfg(target_os = "macos")'.dependencies.tokio]
version = "1.31"
default-features = false
features = ["rt"]

[dev-dependencies]
regex = "1.10.2"
serde_test = "1"
