[package]
name = "maa-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "maa"
path = "src/main.rs"

[dependencies]
maa-utils = { path = "../maa-utils" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
clap_complete = "4.3.2"
maa-utils = { path = "../maa-utils" }

[dev-dependencies]
toml = "0.7"
