[package]
name = "maa-sys"
authors = ["Loong Wang <wangl-cc@outlook.com>"]
version = "0.3.1"
edition = "2021"
rust-version = "1.56.0"
description = "Low-level bindings to MAA (MaaAssistantArknights)"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
runtime = ["libloading"]

[dependencies]
libloading = { version = "0.8", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
serde_test = "1"
