[package]
name = "maa-sys"
authors = ["Loong Wang <wangl-cc@outlook.com>"]
version = "0.4.0"
edition = "2021"
description = "Low-level bindings to MAA (MaaAssistantArknights)"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
runtime = ["libloading"]

[dependencies]
libloading = { version = "0.8", optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
serde_test = "1"
