[package]
name = "maa-sys"
authors = ["Loong Wang <wangl-cc@outlook.com>"]
version = "0.5.0"
edition = "2021"
description = "Low-level bindings to MAA (MaaAssistantArknights)"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
runtime = ["libloading"]

[dependencies]
maa-types = { version = "0.1", path = "../maa-types" }
libloading = { version = "0.8", optional = true }
thiserror = { workspace = true }
