[package]
name = "maa-updater"
version = "0.1.0"
authors = ["Loong Wang <wangl-cc@outlook.com>"]
edition.workspace = true
license.workspace = true

[dependencies]
maa-utils = { path = "../maa-utils" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
clap_complete = "4.3.2"

[dev-dependencies]
serde_json = "1.0"
toml = "0.7"
