[package]
name = "maa-updater"
authors = ["Loong Wang <wangl-cc@outlook.com>"]
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
directories = "5"
anyhow = "1"
clap = { version = "4.3", features = ["derive"] }
paste = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "stream", "json"] }
indicatif = "0.17.6"
tokio = "1.31"
regex = "1.9"
futures-util = "0.3.28"

[target.'cfg(target_os = "linux")'.dependencies]
flate2 = "1"
tar = "0.4.40"

[target.'cfg(not(target_os = "linux"))'.dependencies]
zip = "0.6.6"
