[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
flate2 = { workspace = true }
maa-version = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
toml = { workspace = true }
zip = { workspace = true }

[lints]
workspace = true
