[package]
name = "maa-cli"
version = "0.6.0"
edition.workspace = true
description = "A simple CLI for MAA (MaaAssistantArknights)"
repository.workspace = true
license.workspace = true

[[bin]]
name = "maa"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["clock", "serde", "std"] }
clap = { workspace = true, features = ["derive", "unstable-markdown"] }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
color-print = { workspace = true }
dunce = { workspace = true }
env_logger = { workspace = true, features = ["auto-color"] }
git2 = { workspace = true, optional = true }
indicatif = { workspace = true }
log = { workspace = true }
maa-dirs = { workspace = true }
maa-installer = { workspace = true }
maa-sys = { workspace = true, features = ["runtime"] }
maa-types = { workspace = true, features = ["serde"] }
maa-value = { workspace = true }
maa-version = { workspace = true, optional = true }
prettytable = { workspace = true }
rayon = { workspace = true }
self-replace = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true, optional = true }
signal-hook = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true, features = ["json", "platform-verifier"] }

[dev-dependencies]
maa-value = { workspace = true, features = ["default_batch_mode"] }
regex = { workspace = true }
serde_test = { workspace = true }
tiny_http = { workspace = true }

[features]
default = ["cli_installer", "core_installer", "git2"]
# Common features used to install and update MAA Core and maa-cli self
__installer = ["dep:maa-version"]
# Features used to install update maa-cli self
cli_installer = ["__installer", "dep:sha2"]
# Features used to install and update MAA Core
core_installer = ["__installer"]
# Backend used to update resources
git2 = ["dep:git2"]

[lints]
workspace = true
