[package]
name = "maa-core"
version = "0.1.0"
edition.workspace = true
description = "Safe Wrapper for MaaCore"
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
libloading = { workspace = true, optional = true }
maa-ffi-string = { workspace = true }
maa-ffi-types = { workspace = true }
maa-sys = { workspace = true }
maa-types = { workspace = true, features = ["ffi"] }
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-result = { workspace = true, optional = true }
windows-strings = { workspace = true, optional = true }
windows-sys = { workspace = true, features = [
  "Win32_System_LibraryLoader",
], optional = true }

[features]
runtime = [
  "dep:libloading",
  "maa-sys/runtime",
  "dep:windows-result",
  "dep:windows-strings",
  "dep:windows-sys",
]

[lints]
workspace = true
