[package]
name = "maa-dirs"
version = "0.1.2"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
constcat = { workspace = true }
directories = { workspace = true }
dunce = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
