[package]
name = "maa-dirs"
version = "0.3.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
constcat = { workspace = true }
directories = { workspace = true }
dunce = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
