[package]
name = "maa-installer"
version = "0.2.0"
edition.workspace = true
description = "Download and extraction utilities for MAA"
repository.workspace = true
license.workspace = true

[dependencies]
digest = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
indicatif = { workspace = true }
log = { workspace = true }
semver = { workspace = true }
tar = { workspace = true, optional = true }
thiserror = { workspace = true }
ureq = { workspace = true }
zip = { workspace = true, optional = true }

[dev-dependencies]
sha2 = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["digest", "gz", "tar", "zip"]
digest = ["dep:digest"]
gz = ["dep:flate2", "tar"]
tar = ["dep:tar"]
zip = ["dep:zip"]

[lints]
workspace = true
