[package]
name = "maa-server"
version = "0.1.0"
edition = "2021"
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "server"

[[bin]]
name = "client"

[features]
default = ["client","unix-socket"]

client = []

unix-socket = ["dep:tower", "dep:hyper-util"]

[dependencies]
maa-types = { workspace = true, features = ["serde"] }
maa-sys = { workspace = true, features = ["runtime"] }
maa-dirs.workspace = true

tonic = { version = "0.12" }
prost = "*"
hyper-util = { version = "0.1.10", default-features = false, optional = true }
tower = { version = "0.5.2", optional = true }

tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }

tracing = "0.1.41"
tracing-subscriber = "0.3.19"

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

parking_lot = "0.12.3"
uuid = { version = "1.15.1", features = ["v7"] }

[build-dependencies]
tonic-build = { version = "0.12" }
