[package]
name = "maa-sys"
description = "Low-level bindings and Safe Wrapper for MaaCore"
version = "0.7.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[features]
runtime = [
  "dep:libloading",
  "dep:windows-result",
  "dep:windows-strings",
  "dep:windows-sys",
]

[dependencies]
maa-types = { workspace = true }
libloading = { workspace = true, optional = true }
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-result = { workspace = true, optional = true }
windows-strings = { workspace = true, optional = true }
windows-sys = { workspace = true, optional = true, features = [
  "Win32_System_LibraryLoader",
] }
