[package]
name = "maa-sys"
version = "0.7.0"
authors.workspace = true
edition.workspace = true
description = "Low-level bindings and Safe Wrapper for MaaCore"
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
libloading = { workspace = true, optional = true }
maa-types = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-result = { workspace = true, optional = true }
windows-strings = { workspace = true, optional = true }
windows-sys = { workspace = true, features = [
  "Win32_System_LibraryLoader",
], optional = true }

[features]
runtime = [
  "dep:libloading",
  "dep:windows-result",
  "dep:windows-strings",
  "dep:windows-sys",
]

[lints]
workspace = true
