[package]
name = "maa-sys"
version = "0.10.0"
edition.workspace = true
description = "Low-level bindings for MaaCore"
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
libloading = { workspace = true, optional = true }
maa-ffi-types = { workspace = true }

[features]
runtime = ["dep:libloading"]

[lints]
workspace = true
