[package]
name = "maa-types"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, optional = true }

[dev-dependencies]
serde_test = { workspace = true }

[lints]
workspace = true
