[package]
name = "maa-value"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "A JSON value like Value but support user-defined input"
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
maa-str-ext = { workspace = true }
maa-value-macro = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_test = { workspace = true }

[features]
# Enable batch mode by default
default_batch_mode = []
schema = ["dep:schemars"]

[lints]
workspace = true
