[package]
name = "nonempty-vec"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description = "A non-empty vector type"

[dependencies]
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true

[features]
default = []
schema = ["dep:schemars"]
serde = ["dep:serde"]
